 7. Show other search options at end of search results.
 8. Intercept links on now-playing and browse pages and show a menu allowing to
    choose from following link or searching for item.
 9. Allow editing of podcast URL as well as name.
10. Use treble-clef as genre icon.
11. Fix HTML tags shown in confirmation dialog.
12. Add action to remove duplicates from playlists.

1.8.9
-----
 1. Work-around add/play of a track from favourited album adding all tracks.
 2. Treat backspace as per esc - which will allow navigating back.
 3. Show icons for custom actions in now playing context menu.
 4. Show hover actions for tracks of multi-disc albums shown as one allbum.
 5. Don't split tracks into discs when showing search results.
 6. When scrolling input fields into view check if field is in a list item and
    if so scroll the item into view.
 7. Make only text area of list subtitle clickable.
 8. Use active item colour for hover of clickable subtitles.
 9. Add $COMPOSER for custom actions.
10. Ensure valid artist, and album, name before showing 'Go to artist' or
    'Go to album' menu entries.
11. Use albumartist for 'Go to artist' (in now-playing) if track has albumartist
    but no artist.
12. Fix editing and deleting of podcasts.
13. When edit, or delete a podcast, pass existing name to API call to ensure
    indexes are correct.
14. Place 'Recently used' at end of podcast list (where it is before sort
    anyway).

1.8.8
-----
1. Use pulsing, instead of spinning, icon for active tasks.
2. If encounter an invalid time when calculating queue duration, just ask LMS.
3. Queue item durations are floating point, so handle correctly.
4. Fix subtoolbar single line alignment.
5. Don't set mixer volume when changing players.
6. Move 'Zap' next to remove actions.
7. Only show 'Zap' if custom skip plugin enabled.
8. Fix broken add/play all.

1.8.7
-----
1. Also set 'caret-color' to active colour when indicating playlist name already
   exists.