@@ -31,13 +31,11 @@ var lmsBrowse = Vue.component("lms-browse", {
    <v-btn :title="trans.cancel" flat icon class="toolbar-button" @click="clearSelection()"><v-icon>cancel</v-icon></v-btn>
   </v-layout>
   <v-layout v-else-if="searchActive">
-   <v-btn flat icon @click="homeBtnPressed()" class="toolbar-button" id="home-button" :title="trans.goHome"><v-icon>home</v-icon></v-btn>
-   <v-btn flat icon @click="backBtnPressed()" class="toolbar-button" id="back-button" :title="trans.goBack"><v-icon>arrow_back</v-icon></v-btn>
+   <v-btn flat icon v-longpress="backBtnPressed" class="toolbar-button" id="back-button" :title="trans.goBack"><v-icon>arrow_back</v-icon></v-btn>
    <lms-search-field></lms-search-field>
   </v-layout>
   <v-layout v-else>
-   <v-btn flat icon @click="homeBtnPressed()" class="toolbar-button" id="home-button" :title="trans.goHome"><v-icon>home</v-icon></v-btn>
-   <v-btn flat icon @click="backBtnPressed()" class="toolbar-button" id="back-button" :title="trans.goBack"><v-icon>arrow_back</v-icon></v-btn>
+   <v-btn flat icon v-longpress="backBtnPressed" class="toolbar-button" id="back-button" :title="trans.goBack"><v-icon>arrow_back</v-icon></v-btn>
    <v-layout row wrap @click="showHistory($event)" v-if="headerSubTitle" v-bind:class="{pointer : history.length>1}">
     <v-flex xs12 class="ellipsis subtoolbar-title subtoolbar-pad">{{headerTitle}}</v-flex>
     <v-flex xs12 class="ellipsis subtoolbar-subtitle subtext">{{current && current.id==TOP_MYMUSIC_ID && libraryName ? libraryName : headerSubTitle}}<small v-if="current && current.id!=TOP_MYMUSIC_ID && libraryName && showLibraryName">{{SEPARATOR+libraryName}}</small></v-flex>
@@ -313,7 +311,7 @@ var lmsBrowse = Vue.component("lms-browse", {
             fetchingItems: false,
             hoverBtns: false,
             trans: { ok:undefined, cancel: undefined, selectMultiple:undefined, addall:undefined, playall:undefined, albumRating:undefined,
-                     deleteall:undefined, removeall:undefined, invertSelect:undefined, choosepos:undefined, goHome:undefined, goBack:undefined,
+                     deleteall:undefined, removeall:undefined, invertSelect:undefined, choosepos:undefined, goBack:undefined,
                      select:undefined, unselect:undefined, search:undefined },
             menu: { show:false, item: undefined, x:0, y:0},
             isTop: true,
@@ -599,7 +597,7 @@ var lmsBrowse = Vue.component("lms-browse", {
             this.trans= { ok:i18n('OK'), cancel: i18n('Cancel'), selectMultiple:i18n("Select multiple items"), addall:i18n("Add selection to queue"),
                           playall:i18n("Play selection"), albumRating:i18n("Set rating for all tracks"), deleteall:i18n("Delete all selected items"),
                           invertSelect:i18n("Invert selection"), removeall:i18n("Remove all selected items"), choosepos:i18n("Choose position"), 
-                          goHome:i18n("Go home"), goBack:i18n("Go back") };
+                          goBack:i18n("Go back") };
 
             if (undefined==this.top || this.top.length==0) {
                 this.top = [{ command: [],
@@ -1762,11 +1760,6 @@ var lmsBrowse = Vue.component("lms-browse", {
                 this.fetchingItems = false;
             });
         },
-        homeBtnPressed() {
-            if (this.$store.state.visibleMenus.size<1) {
-                this.goHome();
-            }
-        },
         goHome() {
             this.searchActive = false;
             if (this.history.length==0) {
@@ -1818,9 +1811,13 @@ var lmsBrowse = Vue.component("lms-browse", {
                 this.goBack();
             }
         },
-        backBtnPressed() {
+        backBtnPressed(longPress) {
             if (this.$store.state.visibleMenus.size<1) {
-                this.goBack();
+                if (longPress) {
+                    this.goHome();
+                } else {
+                    this.goBack();
+                }
             }
         },
         goBack(refresh) {
